--- a/try_espnet.ipynb
+++ b/try_espnet.ipynb
@@ -48,6 +48,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "dKf7kGKMJmJS"
+      },
+      "source": [
+        "# If you run this notebook with JupyterLab on Tsubame, uncomment the following line\n",
+        "# ! pip install kenlm"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "gywdx7Ib_HdC"
       },
       "source": [
