--- a/try_espnet.ipynb
+++ b/try_espnet.ipynb
@@ -35,6 +35,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "AN2t03o4KYEV"
+      },
+      "source": [
+        "# If you run this notebook with JupyterLab on Tsubame, uncomment the following lines\n",
+        "# ! module purge\n",
+        "# ! pip install numpy matplotlib\n",
+        "# ! python3 -m pip install --user torch"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ICCcfL8h-Nbu"
       },
       "source": [
