--- a/pytorch_nn_intro.ipynb
+++ b/pytorch_nn_intro.ipynb
@@ -366,7 +366,7 @@
         "########## Implementation details : nn.CrossEntropyLoss #############\n",
         "# Pytorch's nn.CrossEntropyLosss applies softmax internally.\n",
         "# Therefore, if you use nn.CrossEntropyLoss to obtain cross entropy loss, \n",
-        "# you have to fed the output of your neural network before applying a softmax layer.\n",
+        "# you have to fed the output of your neural network before applying softmax.\n",
         "loss = nn.CrossEntropyLoss()\n",
         "loss(z, c)\n",
         "#####################################################################"
