--- a/pytorch_optim_intro.ipynb
+++ b/pytorch_optim_intro.ipynb
@@ -127,7 +127,7 @@
         "dataset_dev = TensorDataset(x_dev, y_dev)\n",
         "dataset_test = TensorDataset(x_test, y_test)\n",
         "\n",
-        "loader_train = DataLoader(dataset_train, batch_size=BatchSize, shuffle=True)\n",
+        "loader_train = DataLoader(dataset_train, batch_size=BatchSize, shuffle=True, drop_last=True)\n",
         "loader_dev = DataLoader(dataset_dev, batch_size=BatchSize)\n",
         "loader_test = DataLoader(dataset_test, batch_size=BatchSize)"
       ],
