--- a/pytorch_optim_intro.ipynb
+++ b/pytorch_optim_intro.ipynb
@@ -12,8 +12,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -55,9 +54,11 @@
       "source": [
         "# Check if GPU is available\n",
         "if torch.cuda.is_available():\n",
-        "    print('CUDA（GPU）is available')\n",
+        "  print('CUDA（GPU）is available')\n",
+        "  device = 'cuda'\n",
         "else:\n",
-        "  print('CUDA（GPU）is not available')"
+        "  print('CUDA（GPU）is not available')\n",
+        "  device = 'cpu'"
       ],
       "execution_count": null,
       "outputs": []
@@ -72,10 +73,10 @@
         "NumSamples = 10000\n",
         "torch.manual_seed(0)\n",
         "# two dimensional data\n",
-        "x = torch.randn(NumSamples,2)*2.0\n",
+        "x = (torch.randn(NumSamples,2)*2.0).to(device)\n",
         "# label is three categories (0,1,2)\n",
-        "y = (torch.sin(x[:,0])*0.9+torch.cos(x[:,1])*0.9).long()+1 \n",
-        "plt.scatter(x[:,0],x[:,1],c=y)\n",
+        "y = ((torch.sin(x[:,0])*0.9+torch.cos(x[:,1])*0.9).long()+1).to(device)\n",
+        "plt.scatter(x[:,0].to('cpu'),x[:,1].to('cpu'),c=y.to('cpu'))\n",
         "print(x.dtype)\n",
         "print(y.dtype)"
       ],
@@ -108,8 +109,8 @@
       "source": [
         "# An alternative test set using meshgrid. \n",
         "a = b = torch.linspace(-5, 5, 101)\n",
-        "x_mesh = torch.flatten(torch.stack(torch.meshgrid(a,b),2),0,1)\n",
-        "y_mesh = (torch.sin(x_mesh[:,0])*0.9+torch.cos(x_mesh[:,1])*0.9).long()+1 "
+        "x_mesh = torch.flatten(torch.stack(torch.meshgrid(a,b),2),0,1).to(device)\n",
+        "y_mesh = ((torch.sin(x_mesh[:,0])*0.9+torch.cos(x_mesh[:,1])*0.9).long()+1).to(device)"
       ],
       "execution_count": null,
       "outputs": []
@@ -164,9 +165,10 @@
       },
       "source": [
         "# Make an instance of the neural network\n",
-        "model = NeuralNetwork()\n",
+        "model = NeuralNetwork().to(device)\n",
         "params = model.state_dict()\n",
-        "print('params =', params)"
+        "print('params =', params)\n",
+        "print(params['layer1.weight'].device)"
       ],
       "execution_count": null,
       "outputs": []
@@ -280,9 +282,9 @@
         "model.eval() # set evaluation mode\n",
         "out = model(x_test)\n",
         "c = torch.argmax(out, 1)\n",
-        "test_crr = (y_test == c).sum()/torch.tensor(y_test.size())\n",
+        "test_crr = (y_test == c).sum().to('cpu')/torch.tensor(y_test.size())\n",
         "print('test_crr =', test_crr.item())\n",
-        "plt.scatter(x_test[:,0],x_test[:,1],c=c)"
+        "plt.scatter(x_test[:,0].to('cpu'),x_test[:,1].to('cpu'),c=c.to('cpu'))"
       ],
       "execution_count": null,
       "outputs": []
@@ -294,7 +296,7 @@
       },
       "source": [
         "# Distribution of errors\n",
-        "plt.scatter(x_test[:,0],x_test[:,1],c=c-y_test)\n",
+        "plt.scatter(x_test[:,0].to('cpu'),x_test[:,1].to('cpu'),c=(c-y_test).to('cpu'))\n",
         "plt.colorbar()"
       ],
       "execution_count": null,
@@ -310,9 +312,9 @@
         "model.eval() # set evaluation mode\n",
         "out = model(x_mesh)\n",
         "c = torch.argmax(out, 1)\n",
-        "mesh_crr = (y_mesh == c).sum()/torch.tensor(y_mesh.size())\n",
+        "mesh_crr = (y_mesh == c).sum().to('cpu')/torch.tensor(y_mesh.size())\n",
         "print('mesh_crr =', mesh_crr.item())\n",
-        "plt.scatter(x_mesh[:,0],x_mesh[:,1],c=c)"
+        "plt.scatter(x_mesh[:,0].to('cpu'),x_mesh[:,1].to('cpu'),c=c.to('cpu'))"
       ],
       "execution_count": null,
       "outputs": []
@@ -324,7 +326,7 @@
       },
       "source": [
         "# Distribution of errors\n",
-        "plt.scatter(x_mesh[:,0],x_mesh[:,1],c=c-y_mesh)\n",
+        "plt.scatter(x_mesh[:,0].to('cpu'),x_mesh[:,1].to('cpu'),c=(c-y_mesh).to('cpu'))\n",
         "plt.colorbar()"
       ],
       "execution_count": null,
