revise the loss and the dev status calculations

--- a/pytorch_optim_intro.ipynb
+++ b/pytorch_optim_intro.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "pytorch_optim_intro.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -243,21 +245,23 @@
         "\n",
         "    # mini-batch processings\n",
         "    for x, y in loader_train:\n",
+        "        batch_size = x.size(0)\n",
         "        loss, num_crr = train_step(x, y)\n",
-        "        train_loss_total += loss\n",
+        "        train_loss_total += batch_size * loss\n",
         "        train_num_crr_total += num_crr\n",
         "        num_train_sample += len(y)\n",
         "            \n",
         "    for x, y in loader_dev:\n",
+        "        batch_size = x.size(0)\n",
         "        loss, num_crr = test_step(x, y)\n",
-        "        dev_loss_total += loss\n",
+        "        dev_loss_total += batch_size * loss\n",
         "        dev_num_crr_total += num_crr\n",
         "        num_dev_sample += len(y)\n",
         "            \n",
         "    train_loss_avg = train_loss_total / num_train_sample\n",
         "    train_crr_avg = train_num_crr_total / num_train_sample\n",
-        "    dev_loss_avg = train_loss_total / num_train_sample\n",
-        "    dev_crr_avg = train_num_crr_total / num_train_sample\n",
+        "    dev_loss_avg = dev_loss_total / num_dev_sample\n",
+        "    dev_crr_avg = dev_num_crr_total / num_dev_sample\n",
         "\n",
         "    log_train.append(train_loss_avg)\n",
         "    log_dev.append(dev_loss_avg)\n",
