--- a/pytorch_imagerecog_intro.ipynb
+++ b/pytorch_imagerecog_intro.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "2021 Kosuke Mori and Takahiro Shinozaki @ Tokyo Tech\n",
         "\n",
-        "Quick introduction of neural network training on MNIST"
+        "Quick introduction of image recognition using MNIST"
       ]
     },
     {
