organize sections and add the section titles

--- a/pytorch_gpu_intro.ipynb
+++ b/pytorch_gpu_intro.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "pytorch_gpu_intro.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -51,51 +52,115 @@
       "source": [
         "To use GPU, your computer have to have it.\n",
         "\n",
-        "If you are using Google colab, you can request to use a computer with a GPU from the top menu : Runtime->Change Tuntime Type -> GPU"
+        "If you are using Google colab, you can request to use a computer with a GPU from the top menu : Runtime -> Change Tuntime Type -> GPU"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "giye2BlT1lhR"
+      },
+      "source": [
+        "# Check if a GPU is available"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "plGehiWVEOp3"
+        "id": "plGehiWVEOp3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd68f115-2f64-4aaf-f9e9-13611b2b7be7"
       },
       "source": [
-        "# Check if a GPU is available\n",
         "if torch.cuda.is_available():\n",
         "    print('CUDA（GPU）is available')\n",
         "else:\n",
-        "  print('CUDA（GPU）is not available')\n"
+        "    print('CUDA（GPU）is not available')"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CUDA（GPU）is available\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S8BLVTqNGw4-"
+        "id": "S8BLVTqNGw4-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39aad02b-571a-4dcc-e78c-30d1eea429e6"
       },
       "source": [
         "# Check the GPU status\n",
         "! nvidia-smi"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wed Nov 17 04:11:57 2021       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 495.44       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   32C    P8    29W / 149W |      3MiB / 11441MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6DSh9n-CGUiN"
+      },
+      "source": [
+        "# Switch a device of a tensor"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jT-e-CalHsDF"
+        "id": "jT-e-CalHsDF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e0736bd-4285-4dd5-a531-5595419ed7f5"
       },
       "source": [
-        "x = torch.tensor([[1.0,2.0],[3.0,4.0]])\n",
+        "x = torch.tensor([[1.0, 2.0], [3.0, 4.0]])\n",
         "print(x)\n",
         "print(x.device)\n",
         "\n",
-        "x = torch.tensor([[1.0,2.0],[3.0,4.0]], device='cpu')\n",
+        "x = torch.tensor([[1.0, 2.0], [3.0, 4.0]], device='cpu')\n",
         "print(x)\n",
         "print(x.device)\n",
         "\n",
-        "x = torch.tensor([[1.0,2.0],[3.0,4.0]], device='cuda')\n",
+        "x = torch.tensor([[1.0, 2.0], [3.0, 4.0]], device='cuda')\n",
         "print(x)\n",
         "print(x.device)\n",
         "\n",
@@ -108,7 +173,29 @@
         "print(z.device)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 2.],\n",
+            "        [3., 4.]])\n",
+            "cpu\n",
+            "tensor([[1., 2.],\n",
+            "        [3., 4.]])\n",
+            "cpu\n",
+            "tensor([[1., 2.],\n",
+            "        [3., 4.]], device='cuda:0')\n",
+            "cuda:0\n",
+            "tensor([[1., 2.],\n",
+            "        [3., 4.]])\n",
+            "cpu\n",
+            "tensor([[1., 2.],\n",
+            "        [3., 4.]], device='cuda:0')\n",
+            "cuda:0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -122,12 +209,26 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ps2J9tr5CUKb"
+        "id": "gOWTAyTHHSxb"
       },
       "source": [
-        "# matrix product computation using CPU/GPU\n",
+        "# Compare a computation speed of CPU/GPU\n",
+        "\n",
+        "## Matrix product"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ps2J9tr5CUKb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb403dd9-02fc-41d2-c609-c88dd775a21a"
+      },
+      "source": [
         "dim=50\n",
         "print('dim= ', dim)\n",
         "\n",
@@ -159,16 +260,40 @@
         "print('elapsed_time (GPU) =', elapsed_time, 'sec')"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dim=  50\n",
+            "elapsed_time (CPU) = 0.0003695487976074219 sec\n",
+            "elapsed_time (GPU) = 0.0005223751068115234 sec\n",
+            "dim=  5000\n",
+            "elapsed_time (CPU) = 3.503896713256836 sec\n",
+            "elapsed_time (GPU) = 0.0044498443603515625 sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VImxUJmNIEn4"
+      },
+      "source": [
+        "## Matrix determinant"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cN7kKY97Wruw"
+        "id": "cN7kKY97Wruw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "69eee69d-6342-461f-f8c5-344cb5763602"
       },
       "source": [
-        "# matrix determinat computation using CPU/GPU\n",
-        "\n",
         "dim=50\n",
         "print('dim= ', dim)\n",
         "\n",
@@ -200,16 +325,40 @@
         "print('elapsed_time (GPU) =', elapsed_time, 'sec')\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dim=  50\n",
+            "elapsed_time (CPU) = 0.05368828773498535 sec\n",
+            "elapsed_time (GPU) = 0.07685184478759766 sec\n",
+            "dim=  5000\n",
+            "elapsed_time (CPU) = 1.45981764793396 sec\n",
+            "elapsed_time (GPU) = 0.3555586338043213 sec\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SGp6SCvAILT1"
+      },
+      "source": [
+        "## Eigenvalues"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cYzG5Pm1Jl4s"
+        "id": "cYzG5Pm1Jl4s",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "80b0a1a1-09d9-4555-d8eb-99dfd0b5dea2"
       },
       "source": [
-        "# eigenvalues computation using CPU/GPU\n",
-        "\n",
         "x = torch.tensor([[1.0,0.0],[0.0,3.0]])\n",
         "e,v = torch.linalg.eig(x)\n",
         "print(e)\n",
@@ -230,7 +379,6 @@
         "elapsed_time = time.time() - start_time\n",
         "print('elapsed_time (GPU) =', elapsed_time, 'sec')\n",
         "\n",
-        "\n",
         "dim=5000\n",
         "print('dim= ', dim)\n",
         "\n",
@@ -247,7 +395,23 @@
         "print('elapsed_time (GPU) =', elapsed_time, 'sec')"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1.+0.j, 3.+0.j])\n",
+            "tensor([[1.+0.j, 0.+0.j],\n",
+            "        [0.+0.j, 1.+0.j]])\n",
+            "dim=  50\n",
+            "elapsed_time (CPU) = 0.028529882431030273 sec\n",
+            "elapsed_time (GPU) = 0.002012014389038086 sec\n",
+            "dim=  5000\n",
+            "elapsed_time (CPU) = 43.454078912734985 sec\n",
+            "elapsed_time (GPU) = 23.43065309524536 sec\n"
+          ]
+        }
+      ]
     }
   ]
 }
