--- a/pytorch_nn_intro.ipynb
+++ b/pytorch_nn_intro.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "pytorch_nn_intro.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -39,10 +40,22 @@
       },
       "source": [
         "import torch\n",
-        "import torch.nn as nn"
+        "import torch.nn as nn\n",
+        "# Install torchviz to visualize the network structure\n",
+        "! pip install torchviz\n",
+        "from torchviz import make_dot "
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TlzbtIRBKhVf"
+      },
+      "source": [
+        "# Define a linear layer"
+      ]
     },
     {
       "cell_type": "code",
@@ -51,7 +64,7 @@
       },
       "source": [
         "# Linear layer\n",
-        "ll =  nn.Linear(2,2)\n",
+        "ll =  nn.Linear(2, 2)\n",
         "print('type(ll) =', type(ll))\n",
         "# parameters are randomly initialized\n",
         "print('weight= ', ll.weight)\n",
@@ -66,7 +79,7 @@
         "id": "V0bUJeZZmc4V"
       },
       "source": [
-        "example affine transformation using the linear layer\n",
+        "Example affine transformation using the linear layer\n",
         "\n",
         "$\n",
         "y = ll(x) =\n",
@@ -112,16 +125,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PyfmBhQJLOpm"
+      },
+      "source": [
+        "# Introduce activation functions"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qnCODo0JjtMN"
       },
       "source": [
-        "# Activation functions\n",
-        "\n",
         "# an example input (two samples of three dimensinal vectors)\n",
         "x = torch.randn(2, 3)\n",
-        "\n",
         "\n",
         "# sigmoid activation function\n",
         "h = nn.Sigmoid()\n",
@@ -135,10 +154,19 @@
         "# apply h to an input x\n",
         "print('sofmax output =', h(x))\n",
         "# check if the sum of the layer output is 1.0\n",
-        "print('sums of layer outputs =', torch.sum(h(x),1))"
+        "print('sums of layer outputs =', torch.sum(h(x), 1))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "acBxR27aLcQh"
+      },
+      "source": [
+        "# Define a neural network"
+      ]
     },
     {
       "cell_type": "code",
@@ -166,7 +194,7 @@
         "cmt = callMethodTest() # Make an instance\n",
         "y = cmt(5.0) # use the instance like a function.\n",
         "print(y)\n",
-        "########################################################\n"
+        "###############################################"
       ],
       "execution_count": null,
       "outputs": []
@@ -202,40 +230,46 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AFbLy5E_Mksd"
+      },
+      "source": [
+        "# Use the network\n",
+        "\n",
+        "## Feed-forward\n",
+        "\n",
+        "The network parameters are not trained yet, so the output is random at this point"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pIFbu2fHeb1n"
       },
       "source": [
-        "# Use the neural network\n",
-        "# (The network parameters are not trained yet, so the output is random at this point)\n",
         "print(x)\n",
         "y = model(x)\n",
-        "print(y)\n"
+        "print(y)"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "pe_Vda1-5TUd"
+        "id": "LAeybL4IPpLI"
       },
       "source": [
-        "# Install torchviz to visualize the network structure\n",
-        "! pip install torchviz\n",
-        "from torchviz import make_dot  "
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## Visualize the network strucure"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RkF-udpj5koo"
+        "id": "GHQf7yjJOYId"
       },
       "source": [
-        "# Visualize the network strucure\n",
         "print(dict(model.named_parameters()))\n",
         "make_dot(y, params=dict(model.named_parameters()))"
       ],
@@ -248,6 +282,8 @@
         "id": "n_e0zYqaogbf"
       },
       "source": [
+        "## Cross entropy loss calculation\n",
+        "\n",
         "Cross entropy loss: uses cross entropy as a loss\n",
         "\n",
         "Cross entropy:\n",
@@ -344,12 +380,11 @@
         "id": "WsexB-pCoe3S"
       },
       "source": [
-        "# Cross entropy loss\n",
-        "z = torch.tensor([[1,-1,2],[-1,0,1]], dtype=torch.float32)\n",
+        "z = torch.tensor([[1, -1, 2], [-1, 0, 1]], dtype=torch.float32)\n",
         "print(z)\n",
         "q = nn.Softmax(1)(z)\n",
         "print(q)\n",
-        "c = torch.tensor([2,1]) # index starts from 0. therefore, the second entroy is 1 and the third entory is 2.\n",
+        "c = torch.tensor([2, 1]) # index starts from 0. therefore, the second entroy is 1 and the third entory is 2.\n",
         "print(c)\n",
         "loss = nn.NLLLoss()\n",
         "loss(torch.log(q),c)"
@@ -375,20 +410,29 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XBTl9_JCNcoR"
+      },
+      "source": [
+        "## Back-propagation\n",
+        "\n",
+        "Obtain gradients of parameters a neural network to minimize cross entropy loss"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "YeNcfWfdsz9G"
       },
       "source": [
-        "# Obtain gradients of parameters a neural network to minimize cross entropy loss\n",
-        "\n",
         "# an example input (two samples of three dimensinal vectors)\n",
         "x = torch.randn(2, 3)\n",
         "## if you want gradients of the input in addition to the gradient of network parameters:\n",
         "## x = torch.randn(2, 3, requires_grad=True)\n",
         "\n",
         "# an example reference\n",
-        "c = torch.tensor([1,0])\n",
+        "c = torch.tensor([1, 0])\n",
         "\n",
         "# my defined neural network\n",
         "model = myNN()\n",
@@ -406,7 +450,7 @@
         "# obtained gradients\n",
         "print(model.layer1.weight.grad)\n",
         "print(model.layer1.bias.grad)\n",
-        "print(x.grad)\n"
+        "print(x.grad)"
       ],
       "execution_count": null,
       "outputs": []
