--- a/pytorch_nn_intro.ipynb
+++ b/pytorch_nn_intro.ipynb
@@ -261,7 +261,7 @@
         "id": "LAeybL4IPpLI"
       },
       "source": [
-        "## Visualize the network strucure"
+        "## Network strucure visualization"
       ]
     },
     {
@@ -287,7 +287,7 @@
         "Cross entropy loss: uses cross entropy as a loss\n",
         "\n",
         "Cross entropy:\n",
-        "$ H(p, q) = \\frac{1}{N} \\sum_{i=1}^N \\sum_{j=1}^C -p_{i,j} log (q_{i,j})$.\n",
+        "$ H(p, q) = \\frac{1}{N} \\sum_{i=1}^N \\sum_{j=1}^C -p_{i,j} \\log (q_{i,j})$.\n",
         "\n",
         "Example:\n",
         "\n",
@@ -310,7 +310,7 @@
         "-1 & 0 & 1 \\\\\n",
         "\\end{array}\\right]$.\n",
         "\n",
-        "By applying sigmoid, we have a categorical distribution $P_i$ for each $Z_i, i \\in \\left\\{1,2\\right\\}$, where the number of categoreis is three. \n",
+        "By applying softmax, we have a categorical distribution $P_i$ for each $Z_i, i \\in \\left\\{1,2\\right\\}$, where the number of categoreis is three. \n",
         "\n",
         "$Q = \n",
         "\\left[\\begin{array}{c}\n",
@@ -323,7 +323,7 @@
         "q_{2,1} & q_{2,2} & q_{3,3} \\\\\n",
         "\\end{array}\\right]\n",
         "=\n",
-        "sigmoid(Z)\n",
+        "\\mathrm{softmax}(Z)\n",
         "=\n",
         "\\left[\\begin{array}{ccc}\n",
         "0.2594965 &  0.035119 &  0.7053845 \\\\\n",
@@ -353,7 +353,7 @@
         "Then corss-entropy loss $L$ becomes:\n",
         "\n",
         "$L=\\frac{1}{2}\n",
-        "  \\sum_{i=1}^2 \\sum_{j=1}^3 -p_{i,j} log (q_{i,j}) = \\frac{1}{2}\\left\\{-log (q_{1,3}) - log(q_{2,2})\\right\\} = \\frac{1}{2} \\left\\{ -log (0.7053845) - log(0.2447285) \\right\\}\n",
+        "  \\sum_{i=1}^2 \\sum_{j=1}^3 -p_{i,j} \\log (q_{i,j}) = \\frac{1}{2}\\left\\{-\\log (q_{1,3}) - \\log(q_{2,2})\\right\\} = \\frac{1}{2} \\left\\{ -\\log (0.7053845) - \\log(0.2447285) \\right\\}\n",
         "  = 0.878309\n",
         "$.\n",
         "\n",
@@ -370,7 +370,7 @@
         "\\end{array}\\right]$,\n",
         "cross-entropy is obtained by:\n",
         "$L=\\frac{1}{2}\n",
-        "  \\sum_{i=1}^2 -p_{i,c_i} log (q_{i,c_i}) = \\frac{1}{2}\\left\\{-log (q_{1,3}) - log(q_{2,2})\\right\\} = 0.878309\n",
+        "  \\sum_{i=1}^2 -p_{i,c_i} \\log (q_{i,c_i}) = \\frac{1}{2}\\left\\{-\\log (q_{1,3}) - \\log(q_{2,2})\\right\\} = 0.878309\n",
         "$."
       ]
     },
