add the softmax explanation to test_step

--- a/pytorch_imagerecog_intro.ipynb
+++ b/pytorch_imagerecog_intro.ipynb
@@ -281,6 +281,10 @@
         "    model.eval() # set evaluation mode\n",
         "\n",
         "    out = model(x)\n",
+        "\n",
+        "    # NOTE: If we omit this softmax operation, the inference results will be the same\n",
+        "    out = nn.Softmax(1)(out) # apply softmax function for the model outputs\n",
+        "    \n",
         "    loss = criterion(out, y)\n",
         "\n",
         "    with torch.no_grad():\n",
