revise the softmax operation and evaluation words

--- a/pytorch_imagerecog_intro.ipynb
+++ b/pytorch_imagerecog_intro.ipynb
@@ -263,9 +263,6 @@
         "\n",
         "    out = model(x) # forward propagation\n",
         "\n",
-        "    # NOTE: If we omit this softmax operation, the inference results will be the same\n",
-        "    out = nn.Softmax(1)(out) # apply softmax function for the model outputs\n",
-        "\n",
         "    optimizer.zero_grad() # clear gradients\n",
         "    loss = criterion(out, y)\n",
         "    loss.backward() # calculate gradient\n",
@@ -273,7 +270,9 @@
         "    optimizer.step() # update network parameters\n",
         "\n",
         "    with torch.no_grad(): # no gradient computation\n",
-        "        num_crr = (y == torch.argmax(out,1)).sum()\n",
+        "        # NOTE: If we omit this softmax operation, the inference results will be the same\n",
+        "        out = nn.Softmax(1)(out) # apply softmax function for the model outputs\n",
+        "        num_crr = (y == torch.argmax(out, 1)).sum()\n",
         "\n",
         "    return (loss.item(), num_crr.item()) # touple of loss and correct count\n",
         "\n",
@@ -282,13 +281,12 @@
         "\n",
         "    out = model(x)\n",
         "\n",
-        "    # NOTE: If we omit this softmax operation, the inference results will be the same\n",
-        "    out = nn.Softmax(1)(out) # apply softmax function for the model outputs\n",
-        "    \n",
         "    loss = criterion(out, y)\n",
         "\n",
         "    with torch.no_grad():\n",
-        "        num_crr = (y == torch.argmax(out,1)).sum()\n",
+        "        # NOTE: If we omit this softmax operation, the inference results will be the same\n",
+        "        out = nn.Softmax(1)(out) # apply softmax function for the model outputs\n",
+        "        num_crr = (y == torch.argmax(out, 1)).sum()\n",
         "\n",
         "    return (loss.item(), num_crr.item())"
       ],
@@ -407,7 +405,7 @@
         "id": "ZWiCw0GItw8n"
       },
       "source": [
-        "# Evaluation the trained model on the test set"
+        "# Evaluate the trained model on the test set"
       ]
     },
     {
@@ -425,8 +423,8 @@
         "    _, num_crr = test_step(x, y)\n",
         "    test_num_crr_total += num_crr\n",
         "    num_test_sample += len(y)\n",
-        "test_crr = test_num_crr_total / num_test_sample\n",
-        "print('test_acc =', test_crr)"
+        "test_acc = test_num_crr_total / num_test_sample\n",
+        "print('test_acc =', test_acc)"
       ],
       "execution_count": null,
       "outputs": []
