fix typos and indents

--- a/pytorch_imagerecog_intro.ipynb
+++ b/pytorch_imagerecog_intro.ipynb
@@ -76,7 +76,7 @@
         "id": "L4vnGrSJmF9d"
       },
       "source": [
-        "# Load the MNIST dataset"
+        "# Load MNIST dataset"
       ]
     },
     {
