--- a/pytorch_nn_intro.ipynb
+++ b/pytorch_nn_intro.ipynb
@@ -63,7 +63,7 @@
         "id": "R4XlkPprgnRw"
       },
       "source": [
-        "# Linear layer\n",
+        "# Linear layer (ll)\n",
         "ll =  nn.Linear(2, 2)\n",
         "print('type(ll) =', type(ll))\n",
         "# parameters are randomly initialized\n",
@@ -82,7 +82,7 @@
         "Example affine transformation using the linear layer\n",
         "\n",
         "$\n",
-        "y = ll(x) =\n",
+        "y = \\mathrm{ll}(x) =\n",
         "\\left[\\begin{array}{cc}\n",
         "1 & 0 \\\\\n",
         "0 & 2 \\\\\n",
@@ -183,13 +183,13 @@
         "\n",
         "# Example\n",
         "class callMethodTest():\n",
-        "  def __init__(self):\n",
-        "    self.coef = 2.5\n",
+        "    def __init__(self):\n",
+        "        self.coef = 2.5\n",
         "\n",
-        "  # __call___ is a special method\n",
-        "  # By defining this in a class, you can call the instance of this class something like as a function \n",
-        "  def __call__(self, x):\n",
-        "    return self.coef * x\n",
+        "    # __call___ is a special method\n",
+        "    # By defining this in a class, you can call the instance of this class something like as a function \n",
+        "    def __call__(self, x):\n",
+        "        return self.coef * x\n",
         "\n",
         "cmt = callMethodTest() # Make an instance\n",
         "y = cmt(5.0) # use the instance like a function.\n",
