--- a/pytorch_tensor_intro.ipynb
+++ b/pytorch_tensor_intro.ipynb
@@ -270,7 +270,7 @@
         "id": "DR5Hm5th2p2Z"
       },
       "source": [
-        "## Derivative with scholar function\n",
+        "## Derivative with scalar function\n",
         "\n",
         "$\\frac{\\partial}{\\partial x}(2x^2+3)|_{x=2} = 4x |_{x=2} = 8$\n"
       ]
