--- a/try_espnet.ipynb
+++ b/try_espnet.ipynb
@@ -54,6 +54,7 @@
       "source": [
         "# Install espnet_model_zoo: utilities to manage pretrained models created by ESPnet\n",
         "# (You might encounter some warning/error messages. If they are harmless, you may ignore them to try speech recognition in this notebook)\n",
+        "! pip install typeguard==2.13.3",
         "! pip install espnet_model_zoo"
       ],
       "execution_count": null,
