fix name of the qa dataset

--- a/pytorch_llm_apps.ipynb
+++ b/pytorch_llm_apps.ipynb
@@ -45,8 +45,8 @@
    "source": [
     "# datasets\n",
     "\n",
-    "summarization dataset: dialogsum (https://huggingface.co/datasets/knkarthick/dialogsum), License: cc-by-nc-sa-4.0<br>\n",
-    "question and answering dataset: alpaca (https://huggingface.co/datasets/tatsu-lab/alpaca/viewer/default/train), License:cc-by-nc-4.0"
+    "summarization dataset: DIALOGSum (https://huggingface.co/datasets/knkarthick/dialogsum), License: cc-by-nc-sa-4.0<br>\n",
+    "question and answering dataset: SQuAD2.0 (https://huggingface.co/datasets/squad_v2), License:cc-by-sa-4.0"
    ]
   },
   {
@@ -176,44 +176,6 @@
    "source": [
     "qa_dataset = load_dataset(\"squad_v2\")\n",
     "qa_dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## load instruction dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset parquet (/home/tslab/phusaeng/.cache/huggingface/datasets/tatsu-lab___parquet/tatsu-lab--alpaca-2b32f0433506ef5f/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['instruction', 'input', 'output', 'text'],\n",
-       "    num_rows: 52002\n",
-       "})"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "instruction_dataset = load_dataset(\"tatsu-lab/alpaca\", split=\"train\")\n",
-    "instruction_dataset"
    ]
   },
   {
