--- a/pytorch_diffusion_mnist_scratch.ipynb
+++ b/pytorch_diffusion_mnist_scratch.ipynb
@@ -17,6 +17,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# installation\n",
+    "!pip install diffusers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
