--- a/pytorch_codegen_finetune.ipynb
+++ b/pytorch_codegen_finetune.ipynb
@@ -40,7 +40,7 @@
     "import torch\n",
     "from transformers import AutoTokenizer, DataCollatorForLanguageModeling\n",
     "from transformers import AutoModelForCausalLM, TrainingArguments, Trainer\n",
-    "from datasets import load_dataset, concatenate_datasets"
+    "from datasets import load_dataset"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +193,7 @@
     }
    ],
    "source": [
+    "# preparing prompt and encode text to token ids with tokenizer\n",
     "def preprocess_function(examples):\n",
     "    \"\"\" prompt template for training the LM \"\"\"\n",
     "    # print(examples[\"func_documentation_string\"], examples[\"func_name\"], examples[\"whole_func_string\"])\n",
@@ -235,8 +236,12 @@
     }
    ],
    "source": [
+    "# after tokenized it, some samples may have the length that is longer than \n",
+    "# the context size of the GPT2, which is 1024 in this case.\n",
+    "# we need to group the text into smaller chunks with a specified block size that is less than 1024\n",
+    "block_size = 700\n",
+    "\n",
     "def group_texts(examples):\n",
-    "    block_size = 700\n",
     "    # Concatenate all texts.\n",
     "    concatenated_examples = {k: sum(examples[k], []) for k in examples.keys()} # sum of list is concatenation\n",
     "    total_length = len(concatenated_examples[list(examples.keys())[0]])\n",
