--- a/pytorch_gpt2_codegen.ipynb
+++ b/pytorch_gpt2_codegen.ipynb
@@ -794,11 +794,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare checkpoint performances"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "\n",
+    "model_path = \"\"\"out/gpt2-python-code-search-test/checkpoint-{number}\"\"\"\n",
+    "checkpoints = [c for c in os.listdir(\"/content/out/gpt2-python-code-search-test/\") if c.startswith(\"checkpoint\")]\n",
+    "\n",
+    "# Sorting by numerical value in place\n",
+    "checkpoints.sort(key=lambda x: int(x.split('-')[1]))\n",
+    "\n",
+    "# Now, print the sorted list\n",
+    "print(checkpoints)\n",
+    "\n",
+    "num_test_samples = 100\n",
+    "text = [get_prompt_answer(df_valid, idx=idx) for idx in range(num_test_samples)]\n",
+    "encodings = tokenizer(\"\\n\\n\".join(text), return_tensors=\"pt\")\n",
+    "\n",
+    "df_log = pd.DataFrame()\n",
+    "stride_len = 512\n",
+    "\n",
+    "for ckpt in checkpoints:\n",
+    "  name = model_path.format(number=ckpt)\n",
+    "  trained_model = AutoModelForCausalLM.from_pretrained(name).to(device)\n",
+    "  mean_cse = evaluate(trained_model, encodings, stride_len)\n",
+    "  ppl = torch.exp(mean_cse)\n",
+    "  print(f\"Cross-entropy loss: {mean_cse:.4f}\")\n",
+    "  print(f\"Perplexity: {ppl:.4f}\")\n",
+    "  log = {\n",
+    "      \"ckpt_name\": f\"ckpt-{ckpt}\",\n",
+    "      \"CSE\": mean_cse.item(),\n",
+    "      \"PPL\": ppl.item()\n",
+    "  }\n",
+    "  df_log = pd.concat([df_log, pd.DataFrame([log])], ignore_index=True)\n",
+    "df_log"
+   ]
   }
  ],
  "metadata": {
