--- a/pytorch_gpt2_codegen.ipynb
+++ b/pytorch_gpt2_codegen.ipynb
@@ -808,7 +808,7 @@
    "source": [
     "import os\n",
     "\n",
-    "model_path = \"\"\"out/gpt2-python-code-search-test/checkpoint-{number}\"\"\"\n",
+    "model_path = \"\"\"out/gpt2-python-code-search-test/{ckpt}\"\"\"\n",
     "checkpoints = [c for c in os.listdir(\"/content/out/gpt2-python-code-search-test/\") if c.startswith(\"checkpoint\")]\n",
     "\n",
     "# Sorting by numerical value in place\n",
@@ -825,7 +825,7 @@
     "stride_len = 512\n",
     "\n",
     "for ckpt in checkpoints:\n",
-    "  name = model_path.format(number=ckpt)\n",
+    "  name = model_path.format(ckpt=ckpt)\n",
     "  trained_model = AutoModelForCausalLM.from_pretrained(name).to(device)\n",
     "  mean_cse = evaluate(trained_model, encodings, stride_len)\n",
     "  ppl = torch.exp(mean_cse)\n",
