--- a/pytorch_diffusion_mnist_scratch.ipynb
+++ b/pytorch_diffusion_mnist_scratch.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "license: Apache-2.0 license\n",
     "\n",
-    "referece: \n",
+    "references: \n",
     "- https://colab.research.google.com/github/huggingface/diffusion-models-class/blob/main/unit1/02_diffusion_models_from_scratch.ipynb#scrollTo=DPTzwfAgYWGi\n",
     "- https://colab.research.google.com/github/huggingface/diffusion-models-class/blob/main/unit2/02_class_conditioned_diffusion_model_example.ipynb#scrollTo=k_d6S0Fwlahy\n",
     "- https://github.com/huggingface/diffusion-models-class/tree/main?tab=Apache-2.0-1-ov-file"
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.3 Define diffusion process function\n",
+    "## 1.3 Define diffusion process function\n",
     "Here we define a simple noising function"
    ]
   },
@@ -429,7 +429,7 @@
     "        super().__init__()\n",
     "        self.model_name = model_name\n",
     "        self.class_emb_size = class_emb_size\n",
-    "        self.class_emb = nn.Embedding(10, 4)\n",
+    "        self.class_emb = nn.Embedding(10, class_emb_size)\n",
     "\n",
     "        if model_name == \"unet_mini\":\n",
     "            self.model = BasicUNet(1 + class_emb_size, 1)\n",
